Changed grid to fix spacing issue, Added color pallette, font(s), animated display

--- a/styles.scss
+++ b/styles.scss
@@ -1,12 +1,27 @@
 *,*:before,*:after{box-sizing:border-box}html,body,div,span,object,iframe,figure,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,code,em,img,small,strike,strong,sub,sup,tt,b,u,i,ol,ul,li,fieldset,form,label,table,caption,tbody,tfoot,thead,tr,th,td,main,canvas,embed,footer,header,nav,section,video{margin:0;padding:0;border:0;font-size:100%;font:inherit;vertical-align:baseline;text-rendering:optimizeLegibility;-webkit-font-smoothing:antialiased;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;text-size-adjust:none}footer,header,nav,section,main{display:block}body{line-height:1}ol,ul{list-style:none}blockquote,q{quotes:none}blockquote:before,blockquote:after,q:before,q:after{content:"";content:none}table{border-collapse:collapse;border-spacing:0}input{-webkit-appearance:none;border-radius:0}
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300;400;700&display=swap');
 
-$color1: #000;
-$color2: #fff;
-$color3: #191919;
+$bg-color: #0F192E;
+$fg-color: #14213D;
+$primary-color: #14306E;
+$secondary-color: #FCA311;
+$text-color: #E5E5E5;
 
-* {
- color: $color2; 
- //  outline: 0.1em dashed red;
+@mixin vertical-align($align: middle) {
+  &:before {
+    content: "";
+    display: inline-block;
+    height: 100%;
+    vertical-align: $align;
+    // you can add font-size 0 here and restore in the children to prevent
+    // the inline-block white-space to mess the width of your elements
+    font-size: 0;
+  }
+  & > * {
+    vertical-align: $align;
+    // although you need to know the font-size, because "inherit" is 0
+    font-size: 14px;
+  }
 }
 
 html, body {
@@ -14,7 +29,9 @@ html, body {
   height: 100%;
   width: 100%;
   background-color: #323232;
+  font-family: 'Roboto Mono', monospace;
   font-size: 1rem;
+  color: $text-color; 
 }
 
 .abs-cntr {
@@ -29,8 +46,7 @@ html, body {
   width: 400px;
   margin: auto;
   padding: 0 15px;
-  // overflow: none;
-  border: 5px solid $color3;
+  background-color: $bg-color;
 }
 
 nav {
@@ -67,9 +83,12 @@ nav {
   position: relative;
   height: 20%;
   width: 100%;
-  border: 1px solid $color1;
   border-radius: 5px;
+  background-color: $fg-color;
+  background-color: lighten(#606F49, 1%);
+  background-color: #3B3B3B;
 
+  box-shadow: inset  0px 0px 15px rgba(0,0,0,0.6);
   margin: 20px 0;
 
   & .abs-cntr {
@@ -88,6 +107,87 @@ nav {
   &--equation {
     font-size: 1.1em;
   }
+
+  &::after {
+    content: "";
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    background: rgba(18, 16, 16, 0.1);
+    opacity: 0;
+    z-index: 2;
+    pointer-events: none;
+    animation: flicker 0.15s infinite;
+  }
+
+  @keyframes flicker {
+    0% {
+    opacity: 0.27861;
+    }
+    5% {
+    opacity: 0.34769;
+    }
+    10% {
+    opacity: 0.23604;
+    }
+    15% {
+    opacity: 0.90626;
+    }
+    20% {
+    opacity: 0.18128;
+    }
+    25% {
+    opacity: 0.83891;
+    }
+    30% {
+    opacity: 0.65583;
+    }
+    35% {
+    opacity: 0.67807;
+    }
+    40% {
+    opacity: 0.26559;
+    }
+    45% {
+    opacity: 0.84693;
+    }
+    50% {
+    opacity: 0.96019;
+    }
+    55% {
+    opacity: 0.08594;
+    }
+    60% {
+    opacity: 0.20313;
+    }
+    65% {
+    opacity: 0.71988;
+    }
+    70% {
+    opacity: 0.53455;
+    }
+    75% {
+    opacity: 0.37288;
+    }
+    80% {
+    opacity: 0.71428;
+    }
+    85% {
+    opacity: 0.70419;
+    }
+    90% {
+    opacity: 0.7003;
+    }
+    95% {
+    opacity: 0.36108;
+    }
+    100% {
+    opacity: 0.24387;
+    }
+  }
 }
 
 .special-btns {
@@ -101,59 +201,64 @@ nav {
     height: 100%;
     width: 40%;
     margin-left: 10%;
-    outline: 1px dashed blue;
     text-align: center;
-    line-height: 2em;
+
+    @include vertical-align;
+    text-align: center;
+    background-color: $primary-color;
+    cursor: pointer;
+    font-size: 1.6em;
+    border: 5px solid darken($primary-color, 5%);
+    border-radius: 5px;
   }
 }
 
 #calulator-btns {
-  outline: 1px dashed blue;
   padding: 15px;
   position: relative;
   height: 60%;
   display: grid;
-  grid-template-columns: repeat(22.5, 4);
-  grid-template-rows: repeat(18, 5);
-  grid-template-areas: 
-    "functions functions functions operators"
-    "numbers numbers numbers operators"
-    "numbers numbers numbers operators"
-    "numbers numbers numbers operators"
-    "numbers numbers numbers operators";
-  gap: 3.33%;
+  background-color: lighten($bg-color, 1%);
+  border-radius: 5px;
+  background-color: $fg-color;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
+  gap: 5%;
 
-  #functions {
-    outline: 1px dashed green;
-    grid-area: functions;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    gap: 3.33%;
+  #zero {
+    grid-column: 1 / span 2;
   }
 
-  #numbers {
-    outline: 1px dashed green;
-    grid-area: numbers;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr 1fr;
-    gap: 3.33%;
-
-    #zero {
-      grid-column: 1 / span 2;
-    }
+  #clear {
+    background-color: $secondary-color;
+    border: 10px solid darken($secondary-color, 10%);
   }
 
-  #operators {
-    outline: 1px dashed green;
-    grid-area: operators;
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
-    gap: 3.33%;
+  #equal {
+    background-color: $secondary-color;
+    border: 10px solid darken($secondary-color, 10%);
   }
 
   .btn {
-    outline: 1px dashed purple;
+    @include vertical-align;
+    text-align: center;
+    background-color: $primary-color;
+    cursor: pointer;
+    font-size: 1.6em;
+    border: 10px solid darken($primary-color, 5%);
+    border-radius: 5px;
+
+    &--function {
+      
+    }
+
+    &--number {
+      background-color: darken($primary-color, 5%);
+      border: 10px solid darken($primary-color, 10%);
+    }
+
+    &--operator {
+
+    }
   }
 }
